bugfix
elements appeared out of order on the z index. Fixed by adding a z index to the header. This makes the header appear above all elements which have a default z index of 0

--- a/public/css/banner.css
+++ b/public/css/banner.css
@@ -12,11 +12,7 @@
     justify-content: center;
 }
 
-.mySlides {
-    display: none;
-    padding: 2px;
-    border: solid black 1px;
-}
+.mySlides {display: none}
 
 .mySlides:first-child {display: block;}
 
@@ -25,7 +21,7 @@ img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  
+  position: relative;
   margin: auto;
   height: 100%;
 }
